--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row text-center my-2 d-none d-xs-none d-sm-none d-md-block" id="create-button">
+                    <!-- <div class="row text-center my-2 d-none d-xs-none d-sm-none d-md-block" id="create-button">
                         <div class="col-12">
                             <button type="button" id="create-button" class="btn btn-primary">Create Shopping List</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- SHOPPING LIST -->
                 <div class="col-md-7 d-none d-xs-none d-sm-none d-md-block my-4">
@@ -139,6 +139,7 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                             <!-- FRONT SHELVES HEADER -->
                             <div class="card">
                                 <div class="card-header ml-0">
@@ -148,7 +149,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <!-- FRUIT & VEG TABLE -->
+                                <!-- FRONT SHELVES TABLE -->
                                 <div id="collapseFrontShelves" class="collapse show" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
@@ -157,18 +158,80 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- FRIDGES HEADER -->
+                            <div class="card">
+                                <div class="card-header ml-0">
+                                    <h5 class="ml-0 text-center">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFridges">
+                                            Fridges
+                                        </button>
+                                    </h5>
+                                </div>
+                                <!-- FRIDGES TABLE -->
+                                <div id="collapseFridges" class="collapse show" data-parent="#accordion">
+                                    <div class="card-body p-0">
+                                        <div class="row text-center m-0">
+                                            <table id="fridges-table" class="table m-0"></table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- FREEZERS HEADER -->
+                            <div class="card">
+                                <div class="card-header ml-0">
+                                    <h5 class="ml-0 text-center">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFreezers">
+                                            Freezers
+                                        </button>
+                                    </h5>
+                                </div>
+                                <!-- FREEZERS TABLE -->
+                                <div id="collapseFreezers" class="collapse show" data-parent="#accordion">
+                                    <div class="card-body p-0">
+                                        <div class="row text-center m-0">
+                                            <table id="freezers-table" class="table m-0"></table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- MIDDLE SHELVES HEADER -->
+                            <div class="card">
+                                <div class="card-header ml-0">
+                                    <h5 class="ml-0 text-center">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseMiddleShelves">
+                                            Middle Shelves
+                                        </button>
+                                    </h5>
+                                </div>
+                                <!-- MIDDLE SHELVES TABLE -->
+                                <div id="collapseMiddleShelves" class="collapse show" data-parent="#accordion">
+                                    <div class="card-body p-0">
+                                        <div class="row text-center m-0">
+                                            <table id="middle-shelves-table" class="table m-0"></table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END SHELVES HEADER -->
+                            <div class="card">
+                                <div class="card-header ml-0">
+                                    <h5 class="ml-0 text-center">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseEndShelves">
+                                            End Shelves
+                                        </button>
+                                    </h5>
+                                </div>
+                                <!-- END SHELVES TABLE -->
+                                <div id="collapseEndShelves" class="collapse show" data-parent="#accordion">
+                                    <div class="card-body p-0">
+                                        <div class="row text-center m-0">
+                                            <table id="end-shelves-table" class="table m-0"></table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!-- <div class="row text-center"> -->
-                        <!-- <table id="table" class="table mr-3"> -->
-                            <!-- <tr class="table-row">
-                                <td class="quantity-field red-line"></td>
-                                <td class="item-field"></td>
-                                <td class="favourite-field"><i class="far fa-star"></i></td>
-                                <td class="remove-field"><i class="far fa-trash-alt"></i></td>
-                            </tr> -->
-                        <!-- </table> -->
-                    <!-- </div> -->
                 </div>
             </div>
         </div>
