--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRUIT & VEG TABLE -->
-                                <div id="collapseFruitVeg" class="collapse show" data-parent="#accordion">
+                                <div id="collapseFruitVeg" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="fruit-veg-table" class="table m-0"></table>
@@ -157,7 +157,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRONT SHELVES TABLE -->
-                                <div id="collapseFrontShelves" class="collapse show" data-parent="#accordion">
+                                <div id="collapseFrontShelves" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="front-shelves-table" class="table m-0"></table>
@@ -175,7 +175,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRIDGES TABLE -->
-                                <div id="collapseFridges" class="collapse show" data-parent="#accordion">
+                                <div id="collapseFridges" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="fridges-table" class="table m-0"></table>
@@ -193,7 +193,7 @@
                                     </h5>
                                 </div>
                                 <!-- FREEZERS TABLE -->
-                                <div id="collapseFreezers" class="collapse show" data-parent="#accordion">
+                                <div id="collapseFreezers" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="freezers-table" class="table m-0"></table>
@@ -211,7 +211,7 @@
                                     </h5>
                                 </div>
                                 <!-- MIDDLE SHELVES TABLE -->
-                                <div id="collapseMiddleShelves" class="collapse show" data-parent="#accordion">
+                                <div id="collapseMiddleShelves" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="middle-shelves-table" class="table m-0"></table>
@@ -229,7 +229,7 @@
                                     </h5>
                                 </div>
                                 <!-- END SHELVES TABLE -->
-                                <div id="collapseEndShelves" class="collapse show" data-parent="#accordion">
+                                <div id="collapseEndShelves" class="collapse" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="end-shelves-table" class="table m-0"></table>
