added show all sections button and functionality

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                             <button class="endshelves location add-item p-2">End Shelves</button>
                         </div>
                     </div>
+                    <div class="row text-center my-2">
+                        <div class="col-12 my-3">
+                            <button id="open-sections">Open all sections</button>
+                        </div>
+                    </div>
                     <!-- RECENTLY ADDED -->
                     <div class="container-fluid d-xs-block d-sm-block d-md-none">
                         <div class="row text-center my-2" id="recently-added-title">
