resolved toggle issue with accordion opening one at a time

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRUIT & VEG TABLE -->
-                                <div id="collapseFruitVeg" class="collapse" data-parent="#accordion">
+                                <div id="collapseFruitVeg" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="fruit-veg-table" class="table m-0"></table>
@@ -162,7 +162,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRONT SHELVES TABLE -->
-                                <div id="collapseFrontShelves" class="collapse" data-parent="#accordion">
+                                <div id="collapseFrontShelves" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="front-shelves-table" class="table m-0"></table>
@@ -180,7 +180,7 @@
                                     </h5>
                                 </div>
                                 <!-- FRIDGES TABLE -->
-                                <div id="collapseFridges" class="collapse" data-parent="#accordion">
+                                <div id="collapseFridges" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="fridges-table" class="table m-0"></table>
@@ -198,7 +198,7 @@
                                     </h5>
                                 </div>
                                 <!-- FREEZERS TABLE -->
-                                <div id="collapseFreezers" class="collapse" data-parent="#accordion">
+                                <div id="collapseFreezers" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="freezers-table" class="table m-0"></table>
@@ -216,7 +216,7 @@
                                     </h5>
                                 </div>
                                 <!-- MIDDLE SHELVES TABLE -->
-                                <div id="collapseMiddleShelves" class="collapse" data-parent="#accordion">
+                                <div id="collapseMiddleShelves" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="middle-shelves-table" class="table m-0"></table>
@@ -234,7 +234,7 @@
                                     </h5>
                                 </div>
                                 <!-- END SHELVES TABLE -->
-                                <div id="collapseEndShelves" class="collapse" data-parent="#accordion">
+                                <div id="collapseEndShelves" class="collapse hide" data-parent="#accordion">
                                     <div class="card-body p-0">
                                         <div class="row text-center m-0">
                                             <table id="end-shelves-table" class="table m-0"></table>
