--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                         <div id="accordion" class="mr-3">
                             <!-- FRUIT & VEG HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFruitVeg">
                                             Fruits & Veg
                                         </button>
@@ -154,8 +154,8 @@
                             </div>
                             <!-- FRONT SHELVES HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFrontShelves">
                                             Front Shelves
                                         </button>
@@ -172,8 +172,8 @@
                             </div>
                             <!-- FRIDGES HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFridges">
                                             Fridges
                                         </button>
@@ -190,8 +190,8 @@
                             </div>
                             <!-- FREEZERS HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFreezers">
                                             Freezers
                                         </button>
@@ -208,8 +208,8 @@
                             </div>
                             <!-- MIDDLE SHELVES HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseMiddleShelves">
                                             Middle Shelves
                                         </button>
@@ -226,8 +226,8 @@
                             </div>
                             <!-- END SHELVES HEADER -->
                             <div class="card">
-                                <div class="card-header ml-0">
-                                    <h5 class="ml-0 text-center">
+                                <div class="card-header p-0">
+                                    <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseEndShelves">
                                             End Shelves
                                         </button>
