--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="row">
                         <div id="accordion" class="mr-3">
                             <!-- FRUIT & VEG HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFruitVeg">
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                             <!-- FRONT SHELVES HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFrontShelves">
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <!-- FRIDGES HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFridges">
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
                             <!-- FREEZERS HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFreezers">
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                             <!-- MIDDLE SHELVES HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseMiddleShelves">
@@ -225,7 +225,7 @@
                                 </div>
                             </div>
                             <!-- END SHELVES HEADER -->
-                            <div class="card">
+                            <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseEndShelves">
