--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="row text-center my-2">
                         <div class="col-12">
                             <h4>Add an item:</h4>
-                            <input type="text" id="item-name" class="form-control text-center" placeholder="Add an item:">
+                            <input type="text" id="item-name" class="form-control text-center" placeholder="Type item name">
                         </div>
                     </div>
                     <div class="row text-center my-2">
