--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@
                     </div>
                     <div class="row text-center my-2">
                         <div class="col-12">
-                            <h4>Add an item:</h4>
+                            <h4>1. Add an item:</h4>
                             <input type="text" id="item-name" class="form-control text-center" placeholder="Type item name">
                         </div>
                     </div>
-                    <div class="row text-center my-2">
+                    <div class="row text-center mt-4">
                         <div class="col col-xs-12 col-md-12">
+                            <h4>2. Quantity:</h4>
                             <button id="minus-button" class="mx-2">-</button><span id="quantity-counter">1</span><button id="plus-button" class="mx-2">+</button>
                         </div>
                     </div>
-                    <div class="row text-center my-2">
+                    <div class="row text-center mt-4">
+                        <div class="col-12">
+                            <h4>3. Select item location:</h4>
+                        </div>
+                    </div>
+                    <div class="row text-center">
                         <div class="col-6 my-3">
                             <button class="fruitveg location add-item p-2">Fruit & Veg</button>
                         </div>
@@ -154,7 +160,7 @@
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFruitVeg">
-                                            Fruits & Veg
+                                            Fruit & Veg
                                         </button>
                                     </h5>
                                 </div>
