fixed bug that caused all buttons to go red rather than just location buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <h4>3. Select item location:</h4>
                         </div>
                     </div>
-                    <div class="row text-center">
+                    <div class="row text-center" id="location_buttons">
                         <div class="col-6 my-3">
                             <button class="fruitveg location add-item p-2">Fruit & Veg</button>
                         </div>
