cleaned up comments formatting

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFruitVeg">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseFruitVeg">
                                             Fruit & Veg
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- FRUIT & VEG TABLE -->
@@ -177,9 +177,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFrontShelves">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseFrontShelves">
                                             Front Shelves
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- FRONT SHELVES TABLE -->
@@ -195,9 +195,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFridges">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseFridges">
                                             Fridges
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- FRIDGES TABLE -->
@@ -213,9 +213,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFreezers">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseFreezers">
                                             Freezers
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- FREEZERS TABLE -->
@@ -231,9 +231,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseMiddleShelves">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseMiddleShelves">
                                             Middle Shelves
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- MIDDLE SHELVES TABLE -->
@@ -249,9 +249,9 @@
                             <div class="card my-2">
                                 <div class="card-header p-0">
                                     <h5 class="text-center my-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseEndShelves">
+                                        <a class="btn btn-link" data-toggle="collapse" data-target="#collapseEndShelves">
                                             End Shelves
-                                        </button>
+                                        </a>
                                     </h5>
                                 </div>
                                 <!-- END SHELVES TABLE -->
